<resources>
    <string name="app_name">My พบหมอ</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="heightdan">ผู้ป่วยความดันโลหิตสูงอาจจะไม่มีอาการใดๆ เลย หรืออาจจะพบว่ามีอาการปวดศีรษะ มึนงง เวียนศีรษะ และเหนื่อยง่ายผิดปกติ ความดันโลหิตสูงอาจทำให้เกิดภาวะแทรกซ้อนได้ 2 กรณีด้วยกันคือ\n \nกรณีที่ 1 ภาวะแทรกซ้อนจากความดันโลหิตสูงโดยตรง ได้แก่ภาวะหัวใจวายหรือหลอดเลือดในสมองแตก\n \nกรณีที่ 2 ภาวะแทรกซ้อนจากหลอดเลือดแดงตีบ เช่น กล้ามเนื้อหัวใจขาดเลือดเฉียบพลัน หรือเรื้อรัง ทำให้หัวใจเต้นผิดจังหวะ อาจจะทำให้ถึงแก่ชีวิตได้ \nหลอดเลือดสมองตีบ เกิดอัมพฤกษ์ อัมพาต \nหรือหลอดเลือดแดงในไตตีบมากถึงขั้นไตวายเรื้อรังได้</string>
    <string name="safeHightdan">การปรับพฤติกรรมการใช้ชีวิตทั้งเรื่องการรับประทานอาหารตามหลักโภชนาการ การออกกำลังกาย\n \nการปรับพฤติกรรมให้มีสุขภาพดี เช่น งดสูบบุหรี่ \nงดแอลกอฮอล์ เป็นต้น\n \nสามารถช่วยป้องกัน\nโรคความดันโลหิตสูง และช่วยลดความดันโลหิตได้</string>
    <string name="kaoSuiam">ผู้ป่วยจะมีอาการปวดบริเวณเข่าหรือลูกสะบ้าขณะ ยืน เดิน หรือขึ้น-ลงบันได ผู้ป่วยอาจได้ยินหรือคลำได้\nเสียงในขณะเดินหรือเคลื่อนไหวเข่า ถ้าอาการเจ็บปวดทำให้การเคลื่อนไหวน้อยลง กล้ามเนื้อที่อยู่รอบๆ \nข้อโดยเฉพาะกล้ามเนื้อ quadricep ที่อยู่ที่ต้นขา\nอาจลีบลงได้</string>
    <string name="agran">อาการ:</string>
    <string name="safekaosuiam">หลีกเลี่ยงการใช้งานเข่าในท่าที่งอเกิน 90 องศา เช่น การนั่งยอง ๆ นั่งกับพื้น การนั่งในลักษณะนี้\nเป็นการเพิ่มแรงดันในเข่า ทำํให้กระดูกที่ไม่เรียบเข้ามาสีกัน แล้วกระตุ้นให้เกิดอาการปวดได้ \nออกกําลังกายกล้ามเนื้อรอบเข่า โดยเฉพาะกล้ามเนื้อหน้าขา ช่วยลดอาการปวดได้</string>
    <string name="safe">วิธีป้องกัน:</string>
    <string name="hightsugar">อาการของระดับน้ำตาลในเลือดสูง ได้แก่ \nรับประทานเก่งขึ้น หิวน้ำบ่อย ปัสสาวะบ่อย อ่อนเพลีย\n \nถ้าระดับน้ำตาลสูง ๆ และยังไม่ได้รับการรักษา \nจะมีน้ำหนักตัวลดลงตามมา อาการของภาวะแทรกซ้อน เช่น ตามัว ไตวาย ชาปลายมือปลายเท้า โรคกล้ามเนื้อหัวใจขาดเลือด โรคหัวใจล้มเหลว โรคหลอดเลือดสมอง</string>
    <string name="hightdann">ความดันโลหิตสูง</string>
    <string name="savehightsugar">เน้นรับประทานคาร์โบไฮเดรตจากผัก ธัญพืช ถั่ว \nผลไม้ และนมจืดไขมันต่ำเป็นประจำ\n \nบริโภคอาหารที่มีใยอาหารสูง เพิ่มการรับประทานผัก หลีกเลี่ยงหรือจำกัดเครื่องดื่มที่มีน้ำตาลเป็นส่วนประกอบมาก เช่น น้ำอัดลม น้ำหวาน</string>
    <string name="diseatboi">โรคที่พบบ่อย</string>
    <string name="rumatoyroct">บริเวณอักเสบส่วนใหญ่ จะเป็นข้อมือ ข้อโคนนิ้วมือ ข้อเท้า ข้อเข่า\n \nโดยจะมีอาการปวดบวมและเมื่อกดจะมีอาการเจ็บบริเวณข้อที่อักเสบ\n \nข้อฝืดตึงไม่สามารถขยับตัวได้สะดวก โดยเฉพาะในเวลาหลังตื่นนอนตอนเช้าและต้องใช้เวลาอย่างน้อย 1 ชม. อาการข้อฝืดตึงจึงจะเริ่มดีขึ้น</string>
    <string name="rumatoy">โรคข้ออักเสบรูมาตอยด์</string>
    <string name="saferumatoy">ในปัจจุบันยังไม่มีวิธีการป้องกันโรคข้ออักเสบรูมาตอยด์ เนื่องจากยังไม่ทราบสาเหตุการเกิดโรคที่แน่ชัด ทำให้การรักษาโรครูมาตอยด์ในส่วนใหญ่เป็นการรักษาเพื่อบรรเทาอาการความรุนแรงของโรค และยับยั้งการอักเสบของข้อเพียงเท่านั้น\n \nสำหรับผู้ป่วยที่เข้ารับการรักษาที่ถูกต้องและรวดเร็วจะช่วยลดโอกาสที่ข้อจะพิการได้\n \nดังนั้นหากคุณมีอาการผิดปกติที่ปวดตาข้อบริเวณต่างๆ ในร่างกาย ควรรีบไปพบแพทย์เพื่อตรวจร่างกายและเข้ารับการรักษาทันที เพื่อลดโอกาสเสี่ยงที่จะเกิดข้อพิการ</string>
    <string name="loadhert">โรคหลอดเลือดหัวใจ</string>
    <string name="loadhertroct">เจ็บหน้าอก หายใจลำบาก เหนื่อยง่าย บางครั้ง\nอาจไม่มีอาการ แต่ตรวจพบในกรณีฉุกเฉิน เช่น \nหัวใจวาย</string>
    <string name="saveloadhert">ออกกำลังกายอย่างสม่ำเสมอ รับประทานอาหารที่ดีต่อสุขภาพหัวใจ เช่น ลดไขมันอิ่มตัว หลีกเลี่ยงการสูบบุหรี่และการดื่มแอลกอฮอล์ และตรวจสุขภาพประจำปี</string>
    <string name="hertlomroct">หายใจลำบาก โดยเฉพาะเวลานอนราบขาบวม \nท้องบวม เหนื่อยง่าย และรู้สึกอ่อนแรง</string>
    <string name="hertlom">โรคหัวใจล้มเหลว</string>
    <string name="saveheartlom">ควบคุมความดันโลหิตและระดับน้ำตาลในเลือดรักษาโรคประจำตัว เช่น เบาหวาน ความดันโลหิตสูงหลีกเลี่ยงการเครียด</string>
    <string name="hertsieb">โรคกล้ามเนื้อหัวใจตายเฉียบพลัน</string>
    <string name="hertsiebroct">เจ็บแน่นหน้าอก ร้าวไปที่แขนซ้ายหรือกรามเหงื่อออกเย็น คลื่นไส้ อาเจียน</string>
    <string name="heartrua">โรคลิ้นหัวใจรั่วหรือตีบ</string>
    <string name="heartruaroct">เหนื่อยง่าย หายใจติดขัด ใจสั่น หรือรู้สึกหัวใจเต้นผิดจังหวะ ขาบวม และท้องอืด</string>
    <string name="saveheartrua">ป้องกันการติดเชื้อที่อาจกระทบหัวใจ เช่น \nหลีกเลี่ยงการติดเชื้อในช่องปาก\n \nตรวจสุขภาพประจำปี หากมีประวัติครอบครัวควรระวังเป็นพิเศษ\n \nรับวัคซีนป้องกันโรคที่อาจกระทบหัวใจ เช่น \nไข้หวัดใหญ่์</string>
    <string name="heartdance">โรคหัวใจเต้นผิดจังหวะ</string>
    <string name="gramoin">โรคกล้ามเนื้ออ่อนแรง</string>
    <string name="gramoinroct">กล้ามเนื้ออ่อนแรง โดยเฉพาะที่ใบหน้า ดวงตา \nและแขนขา หนังตาตก พูดไม่ชัด กลืนลำบาก \nอ่อนแรงมากขึ้นเมื่อใช้งานกล้ามเนื้อเป็นเวลานาน</string>
    <string name="savegramoin">หลีกเลี่ยงความเครียดที่อาจกระตุ้นอาการ หลีกเลี่ยงการใช้ยาบางชนิดที่อาจกระทบระบบประสาทและกล้ามเนื้อ (ปรึกษาแพทย์ก่อนใช้ยา) ดูแลสุขภาพร่างกายให้แข็งแรง และพักผ่อนเพียงพอ</string>
    <string name="garmsium">โรคกล้ามเนื้อเสื่อม</string>
    <string name="gramsiumroct">กล้ามเนื้ออ่อนแรงและลีบลงอย่างต่อเนื่อง \nการเคลื่อนไหวลำบาก เดินเขย่งหรือเสียการทรงตัว อาจมีปัญหาเกี่ยวกับหัวใจหรือการหายใจ</string>
    <string name="savegramsium">โรคนี้เกิดจากพันธุกรรม การป้องกันที่สำคัญคือ\nการตรวจพันธุกรรมก่อนมีบุตร หมั่นออกกำลังกายแบบเบาๆ เพื่อรักษาสภาพกล้ามเนื้อ รับการตรวจและติดตามการรักษาอย่างสม่ำเสมอ</string>
    <string name="fibroal">โรคไฟโบรมัยอัลเจีย</string>
    <string name="fibroalroct">ปวดกล้ามเนื้อทั่วร่างกาย โดยไม่มีสาเหตุที่ชัดเจน อ่อนเพลีย นอนไม่หลับ ปวดศีรษะหรือมีปัญหา\nเกี่ยวกับการจดจำ</string>
    <string name="savefibroal">หลีกเลี่ยงความเครียดและจัดการอารมณ์ \nออกกำลังกายแบบเบาๆ เช่น โยคะหรือว่ายน้ำ \nพักผ่อนเพียงพอและมีการจัดตารางชีวิตที่สมดุล</string>
    <string name="garmagsuam">โรคกล้ามเนื้ออักเสบ</string>
    <string name="granagsuam">ปวดและอ่อนแรงที่กล้ามเนื้อ โดยเฉพาะที่แขน\nและขา บางครั้งอาจมีอาการบวมแดงร่วมด้วย \nอาจมีไข้ อ่อนเพลีย</string>
    <string name="savegramagsuam">หลีกเลี่ยงการใช้งานกล้ามเนื้อหนักจนเกินไป รักษาความสะอาดของร่างกายเพื่อลดโอกาสการติดเชื้อ หากมีอาการผิดปกติ ควรรีบพบแพทย์เพื่อรับการรักษา</string>
    <string name="brainsuem">โรคสมองเสื่อม</string>
    <string name="brainsuemroct">ความจำเสื่อม โดยเฉพาะการจำเหตุการณ์ที่เพิ่ง\nเกิดขึ้น สับสนเรื่องเวลาและสถานที่ พฤติกรรมเปลี่ยนไป อารมณ์แปรปรวน</string>
    <string name="savebrainsuem">กระตุ้นการทำงานของสมองด้วยการอ่านหนังสือ\n \nเล่นเกมฝึกสมอง\n \nออกกำลังกายสม่ำเสมอ เพื่อเพิ่มการไหลเวียนของเลือดไปยังสมอง\n \nรับประทานอาหารที่มีประโยชน์ เช่น ปลา ผักใบเขียว และธัญพืช</string>
    <string name="alsimer">โรคอัลไซเมอร์</string>
    <string name="alsimerroct">สูญเสียความจำระยะสั้นก่อน จากนั้นอาการ\nจะรุนแรงขึ้น ลืมชื่อคนใกล้ชิดหรือสิ่งที่คุ้นเคย \nมีปัญหาในการตัดสินใจและการวางแผน</string>
    <string name="savealsimer">รักษาระดับน้ำตาล ความดันโลหิต และไขมัน\nในเลือดให้อยู่ในเกณฑ์ปกติ\n \nหลีกเลี่ยงอาหารที่มีไขมันอิ่มตัวสูง\n \nนอนหลับพักผ่อนให้เพียงพอ</string>
    <string name="brainblood">โรคหลอดเลือดสมอง</string>
    <string name="brainbloodroct">แขนขาอ่อนแรงหรือชาครึ่งซีก พูดไม่ชัดหรือพูด\nไม่ได้ หน้าบิดเบี้ยว เดินเซ</string>
    <string name="savebrainblood">ควบคุมความดันโลหิต เบาหวาน และไขมันในเลือด\n \nหลีกเลี่ยงการสูบบุหรี่และการดื่มแอลกอฮอล์\n \nออกกำลังกายและรักษาน้ำหนักให้อยู่ในเกณฑ์ปกติ</string>
    <string name="paginson">โรคพาร์กินสัน</string>
    <string name="paginsonroct">ตัวสั่นขณะพัก การเคลื่อนไหวช้าลง กล้ามเนื้อ\nแข็งเกร็ง ทรงตัวลำบาก</string>
    <string name="savepaginson">รับประทานอาหารที่มีสารต้านอนุมูลอิสระ เช่น \nผลไม้และผัก ออกกำลังกายที่ช่วยเรื่องการทรงตัว เช่น โยคะ หรือไทเก๊ก หลีกเลี่ยงสารพิษ</string>
    <string name="suemsao">โรคซึมเศร้าในผู้สูงอายุ</string>
    <string name="suemsoaroct">ความรู้สึกเศร้า สิ้นหวัง หรือไม่มีความสุข เบื่ออาหาร น้ำหนักลด นอนไม่หลับหรือหลับมากเกินไป</string>
    <string name="savesuemsao">สร้างสภาพแวดล้อมที่อบอุ่นและสนับสนุนจิตใจ\n \nกระตุ้นให้ผู้สูงอายุทำกิจกรรมที่สนุกสนาน เช่น \nงานอดิเรก หรือพบปะเพื่อนฝูง\n \nหากมีอาการซึมเศร้า ควรปรึกษาจิตแพทย์</string>
    <string name="bloodexit">โรคไข้เลือดออก</string>
    <string name="bloodexitroct">ปวดท้องอย่างรุนแรง (บริเวณชายโครงขวา) ที่อาจมีสาเหตุจากภาวะตับโต (Hepatomegaly)\n \nคลื่นไส้ อาเจียนอย่างต่อเนื่อง เบื่ออาหาร\n \nภาวะเลือดออกผิดปกติ\n \nเลือดออกตามไรฟัน เลือดกำเดาไหล ปัสสาวะหรืออุจจาระปนเลือด หรืออาเจียนเป็นเลือด\n \nมีจ้ำเลือด หรือจุดเลือดออกเล็ก ๆ ตามผิวหนัง\n \nหายใจลำบาก หายใจถี่เร็ว</string>
    <string name="savebloodexit">กำจัดที่อยู่อาศัยของยุงลาย เช่น ล้างถาดน้ำ กล่องน้ำ เพื่อไม่ให้ยุงวางไข่และเจริญพันธุ์\n \nใส่เสื้อผ้าที่ครอบคลุมแขนและขา\n \nใช้ยากันยุงและสารกันยุง การใช้ยากันยุงหรือสารกันยุงที่มีประสิทธิภาพจะสามารถช่วยลดโอกาสถูกยุงลายกัด\n \nฉีดวัคซีนป้องกันไข้เลือดออก เป็นสิ่งที่สำคัญในการควบคุมการแพร่ระบาดของโรค ผู้ที่ได้รับวัคซีนป้องกันโรคไข้เลือดออกจะสามารถช่วยลดความรุนแรงของโรคลงได้\n \nสร้างสภาพแวดล้อมที่ไม่เหมาะสมสำหรับการเจริญพันธุ์ของยุงลาย</string>
    <string name="heartdanceroct">ใจสั่น รู้สึกหัวใจเต้นเร็วหรือช้าเกินไป หน้ามืด \nเป็นลม หายใจลำบาก</string>
    <string name="safeheartdance">หลีกเลี่ยงการดื่มคาเฟอีนในปริมาณมาก\n \nนอนหลับพักผ่อนให้เพียงพอ ปรึกษาแพทย์หากรู้สึกถึงการเต้นหัวใจผิดปกติ</string>
    <string name="inputpass">กรอกรหัสผ่าน</string>

</resources>